Fixed Mobile Menu which statyed visible on resizeing the browser

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@ a{
 }
 
 /* Top Menu */
+.navigation{
+  position: fixed;
+  width: 100%;
+}
 .menu-button{
   cursor: pointer;
   display: inline-block;
@@ -182,7 +186,6 @@ a{
 }
 .tools-list{
   padding: 10px 20px;
-  /* text-align: center; */
 }
 .project-info{
   padding: 10px 0px;
@@ -196,7 +199,7 @@ a{
   color: black;
   padding: 8px 25px;
   border: none;
-  font-size: 1.3em;
+  font-size: 0.9em;
 }
 .web-button:focus{
   background: greenyellow;
@@ -301,7 +304,6 @@ a{
 }
 .submit{
   margin-top:20px;
-  font-size: .9em;
 }
 .input-div{
   width: 100%;
@@ -362,10 +364,6 @@ a{
   }
   .menu-items-list-mobile{
     display: none;
-  }
-  .navigation{
-    position: fixed;
-    width: 100%;
   }
   .menu-items-list{
     position: static;
